# llmcall

./: .dataclass.json  README.md  pyproject.toml
llmcall/: __init__.py  __main__.py  core.py  mix.py  schema.py
tests/: test_llmcall.py
